--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^9.0.0"
+    "lucide-react": "^0.555.0",
+    "mongoose": "^9.0.0",
+    "node-cron": "^4.2.1"
   }
 }
