--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,13 @@
   "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "lucide-react": "^0.555.0",
     "mongoose": "^9.0.0",
     "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.11",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
