start pipline try 2

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,5 @@ steps:
   - script: |
       cd backend
       npm install
-      npm run build
-    displayName: 'Build backend'
+    displayName: 'Install backend dependencies'
 
