--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,40 @@
-/package-lock.json 
+--- Dependencies (תלויות) ---
+
+תיקייה כבדה מאוד שאסור להעלות. Render יתקין לבד.
+
+node_modules/
+
+--- Security (אבטחה) ---
+
+קבצים שמכילים סיסמאות ומפתחות - אסור שיעלו לגיט!
+
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+--- Build Output (תוצרי בנייה) ---
+
+התיקייה שנוצרת אחרי build - לא צריך להעלות אותה
+
+dist/
+build/
+
+--- Logs (לוגים) ---
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+logs
+*.log
+
+--- OS Files (קבצי מערכת) ---
+
+.DS_Store
+Thumbs.db
+
+--- Editor Config (הגדרות עורך) ---
+
+.vscode/
+.idea/
