Added Excel import/export features, fixed guest list UI and form layout

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,13 +15,20 @@
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "fs": "^0.0.1-security",
+    "iconv-lite": "^0.7.1",
+    "jschardet": "^3.1.4",
+    "json2csv": "^6.0.0-alpha.2",
     "lucide-react": "^0.555.0",
     "mongoose": "^9.0.0",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.11",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
