--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,9 @@
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.11",
+    "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.8.3",
+    "whatsapp-web.js": "^1.34.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
