add twilio dependency

--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^7.0.11",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.8.3",
+    "twilio": "^5.11.1",
     "whatsapp-web.js": "^1.34.2",
     "xlsx": "^0.18.5"
   },
