refactor tests to run via pytest

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,11 @@ Thumbs.db
 
 .vscode/
 .idea/
+
+--- Python & Pytest (תוספת חשובה עבור הטסטים) ---
+__pycache__/
+*.py[cod]
+*$py.class
+.pytest_cache/
+venv/
+env/
